# JokersEncoder

./: .gitignore
Lib/StrmBase/: strmbase.lib
Source/: CMakeLists.txt
Source/CMake/: DateUtils.cmake  Project.cmake
Source/CMake/Modules/: FindVLD.cmake
Source/JokersEncoder/: CMakeLists.txt
Source/JokersEncoder/Src/: EncoderThread.cpp  EncoderThread.h  EncodingOptions.h  JokersEncoder.cpp  JokersEncoder.h  JokersEncoderDlg.cpp  JokersEncoderDlg.h  OptionsDlg.cpp  OptionsDlg.h  stdafx.cpp  stdafx.h
Source/JokersEncoder/Src/Win32/: JokersEncoder.rc  JokersEncoder.rc2  resource.h
Source/JokersGraphics/: CMakeLists.txt
Source/JokersGraphics/Src/: AlphaLBItem.cpp  AlphaLBItem.h  AutoSingleton.h  BitmapDC.cpp  BitmapDC.h  BmpImageHandler.cpp  BmpImageHandler.h  Colour.cpp  Colour.h  ColourManager.cpp  ColourManager.h  Cursor.h  Cursor.inl  CursorBase.cpp  CursorBase.h  Drawer.cpp  Drawer.h  DrawerBase.cpp  DrawerBase.h  DrawerD2D.cpp  DrawerD2D.h  DrawerGDI.cpp  DrawerGDI.h  DrawerOGL.cpp  DrawerOGL.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Image.cpp  Image.h  ImageCtrl.cpp  ImageCtrl.h  ImageHandler.cpp  ImageHandler.h  ImageManager.cpp  ImageManager.h  JokersGraphicsPrerequisites.h  Logger.cpp  Logger.h  (+42 more)
Source/JokersGraphics/Src/Win32/: JokersGraphics.rc.in
Source/OpenGL2D/: CMakeLists.txt
Source/OpenGL2D/Src/: GL2D.cpp  GL2D.h  GLAttribute.cpp  GLAttribute.h  GLBaseTypes.h  GLBitmap.cpp  GLBitmap.h  GLBitmapRenderTarget.cpp  GLBitmapRenderTarget.h  GLBrush.h  GLContext.cpp  GLContext.h  GLFactory.cpp  GLFactory.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLGeometryBuffer.cpp  GLGeometryBuffer.h  GLHelper.h  GLHwndRenderTarget.cpp  GLHwndRenderTarget.h  GLImage.h  GLObject.h  GLRenderTarget.cpp  GLRenderTarget.h  GLRenderTargetBase.cpp  GLRenderTargetBase.h  GLRenderTargetBase.inl  GLRenderTargetInterface.h  GLRenderTargetInterface.inl  GLResource.h  GLShaderProgram.cpp  GLShaderProgram.h  GLSolidColorBrush.h  GLStrokeStyle.h  GLTexture.cpp  GLTexture.h  GLUniform.cpp  GLUniform.h  GLUnknown.h  (+4 more)
Source/OpenGL2D/Src/Win32/: OpenGL2D.rc.in
